kubernetes/miniserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniserver-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: miniserver-deployment
  template:
    metadata:
      labels:
        app: miniserver-deployment
    spec:
      containers:
      - image: sakisv/miniserver:0.0.3
        imagePullPolicy: IfNotPresent
        name: miniserver
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
