kubernetes/miniserver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: miniserver-deployment
  namespace: default
spec:
  ports:
  - nodePort: 31704
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: miniserver-deployment
  type: NodePort
